# HolySheet

./: .gitignore  CMakeLists.txt  README.md
Source/: NoteMapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StaffRenderer.cpp  StaffRenderer.h
